feat: update metadata for menu via script

--- a/pages/en-us/converter.mdx
+++ b/pages/en-us/converter.mdx
@@ -2,8 +2,8 @@ import { Layout, Playground, Attributes } from 'lib/components'
 import { Card, Spacer, Link, Image, Text, Divider, Code, Grid } from '@geist-ui/core'
 
 export const meta = {
-  title: 'Card',
-  group: 'Surfaces',
+  title: 'Converter',
+  group: 'Math',
 }
 
 ## Card
@@ -167,6 +167,4 @@ type CardType =
 
 </Attributes>
 
-export default ({ children }) => <Layout meta={meta}>{children}</Layout
-
->
+export default ({ children }) => <Layout meta={meta}>{children}</Layout>
